# Awesome-Generative-AI-for-Game-and-Anime-Production

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  tasks.ps1  taxonomy.yml
.github/workflows/: deploy.yml  test-agent.yml  update.yml
agent/: config.py  llm_client.py  prompts.py  run_agent.py  schema.py  taxonomy.py
agent/tools/: __init__.py  arxiv_tool.py
data/: entries.yml  services.yml
docs/: about.ja.md  about.md  get-started.md  index.ja.md  index.md
docs/stylesheets/: extra.css
pipeline/: merge.py
scripts/: backfill.py  gen_catalog.py  harvest_preview.py  seed.py
scripts/seed_data/: awesome_ai_music_generation.json  awesome_cad.json
tests/: test_agent.py
